assets/wizards/handoff-banner/style.scss
/**
 * Handoff Banner
 */

@import '../../shared/scss/colors';
@import '~@wordpress/base-styles/colors';

#newspack-handoff-banner {
	background: $primary-500;
	display: block;
	margin: 0 0 0 -20px;
	padding: 20px;
	position: relative;

	// Dismissed

	&:empty {
		display: none;
	}

	// Help Tabs

	&.has-help-tabs {
		margin-top: 40px;

		@media screen and ( min-width: 783px ) {
			margin-top: 30px;
		}

		&:before {
			background: $primary-500;
			content: "";
			display: block;
			height: 100vh;
			left: 0;
			position: absolute;
			right: 0;
			top: -100vh;
			z-index: -1;
		}
	}

	// Jetpack

	.jetpack-pagestyles & {
		margin-left: 0;
	}

	// Google Site Kit

	.site-kit_page_googlesitekit-splash & {
		margin-bottom: -25px;
	}
}

.newspack-handoff-banner {
	align-items: center;
	background: white;
	border-radius: 4px;
	box-shadow: 0 4px 8px rgba( black, 0.08 );
	box-sizing: border-box;
	color: $dark-gray-300;
	font-size: 14px;
	justify-content: space-between;
	line-height: 24px;
	padding: 4px;
	margin: 0;
	width: 100%;

	@media screen and ( min-width: 600px ) {
		display: flex;
	}

	// Text

	.newspack-handoff-banner__text {
		align-items: center;
		display: flex;
		margin: 4px;

		@media screen and ( min-width: 600px ) {
			&:before {
				background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M32 16c0 8.836-7.164 16-16 16-8.837 0-16-7.164-16-16S7.164 0 16 0s16 7.164 16 16zm-10.732.623h1.72v-1.125h-2.823l1.103 1.125zm-3.249-3.31h4.97v-1.125h-6.072l1.102 1.124v.001zm-3.248-3.311h8.217V8.878h-9.32l1.103 1.124zM9.01 8.878l13.977 14.245h-4.66l-5.866-5.98v5.98h-3.45V8.878H9.01z' fill='%233366ff' fill-rule='evenodd'/%3E%3C/svg%3E%0A");
				background-size: 32px 32px;
				content: "";
				display: block;
				flex: 0 0 auto;
				height: 32px;
				margin: 0 8px 0 12px;
				width: 32px;
			}
		}
	}

	// Buttons

	.newspack-handoff-banner__buttons {
		display: flex;
		flex-wrap: wrap;

		@media screen and ( min-width: 600px ) {
			justify-content: flex-end;
		}

		.newspack-button {
			margin: 4px;

			&.is-primary {
				flex: 0 0 auto;
				order: -1;
				text-decoration: none;

				@media screen and ( min-width: 600px ) {
					order: 0;
				}
			}

			&.is-link {
				background: transparent;
				cursor: pointer;
				padding: 0;
				text-decoration: underline;

				&:active,
				&:focus,
				&:hover {
					text-decoration: none;
				}
			}
		}
	}
}

